HelloUltraviolet/Fixtures/RejectedSource/Procedures/MainGeneric/Source/Main.uv
//! Rejected executable specimen for a generic main procedure.

public procedure main<TValue>(context: Context) -> i32 {
    return 0
}
